Resolved footer spacing

--- a/src/app/components/shared/header/header.component.css
+++ b/src/app/components/shared/header/header.component.css
@@ -87,7 +87,7 @@ div a:hover {
 }
 
 .text-pride {
-    color: #018b8b;
+    color: #fd4747;
 }
 
 .active {
